--- a/lab3.html
+++ b/lab3.html
@@ -46,7 +46,17 @@
           <div  >
             <p id="location">Mouse Location Tracker</p>
           </div>
-        </main>
+
+          <div id="animated">
+            <img src="images/house.jpg" alt="A drawing of a house.">
+          </div>
+
+          <button id="click-me">click me</button>
+
+          <button id="myButton">add some sparkle</button>
+          <div id="myElement">
+            <img src="images/glitter.png" alt="A star.">
+          </div>
 
         <footer>
           <p>This fictitious website was created as an academic exercise for the Diablo Valley College course, ARTDM-174. In no way should this content be considered or used as a source of factual public information.</p>
