--- a/lab3.html
+++ b/lab3.html
@@ -16,9 +16,18 @@
             <a href="">about</a>
             <a href="">contact</a>
           </nav>
+          <div>
+            <p id="location">Mouse Position Tracker</p>
+          </div>
     </header>
 
     <main>
+      
+      <button id="myButton">add some sparkle</button>
+      <div id="myElement">
+        <img src="images/glitter.png" alt="A star.">
+      </div>
+
       <h2>Featured Posts</h2>
         <section class="featured-posts">
             <article>
@@ -43,20 +52,10 @@
             </ul>
           </section>
 
-          <div  >
-            <p id="location">Mouse Location Tracker</p>
-          </div>
-
           <div id="animated">
             <img src="images/house.jpg" alt="A drawing of a house.">
           </div>
-
           <button id="click-me">click me</button>
-
-          <button id="myButton">add some sparkle</button>
-          <div id="myElement">
-            <img src="images/glitter.png" alt="A star.">
-          </div>
 
           <script src="js/lab3.js"></script>
 
